# spanner-graph-agent

./: .gitignore  .pre-commit-config.yaml  Chat_with_Spanner_Graph_Agent.ipynb  README.md  pyproject.toml
.github/workflows/: lint.yml
datasets/finance/: bootstrap_and_eval.py  generate_data.py  results  schema.ddl
docs/: Chat_with_Spanner_Graph_Agent.ipynb  contributing.md
examples/: README.md  agent.py  requirements.txt
src/graph_agents/: __init__.py
src/graph_agents/agents/: __init__.py  graph_agent.py  modelling_agent.py  query_agent.py
src/graph_agents/agents/construction/: __init__.py  diagram_to_data.py  flowchart_to_data.py  orchestrator.py  pg_diagram_to_data.py
src/graph_agents/agents/model/: __init__.py  modelling_agent.py
src/graph_agents/agents/query/: __init__.py  query_agent.py
src/graph_agents/agents/schema/: __init__.py  orchestrator.py
src/graph_agents/agents/visualization/: __init__.py  orchestrator.py
src/graph_agents/instructions/: GRAPH_AGENT_DESCRIPTION.md  GRAPH_AGENT_INSTRUCTIONS.md  prompts.py
src/graph_agents/instructions/construction/: DIAGRAM_TO_DATA_INSTRUCTIONS.md  conversation_to_data.md  flowchart_to_data.md  from_flowchart_description.md  from_flowchart_instructions.md  orchestrator.md  pg_diagram_to_data.md
src/graph_agents/instructions/model/: GRAPH_LOGICAL_SCHEMA_MODELLING_AGENT_INSTRUCTIONS.md  GRAPH_MODELLING_AGENT_INSTRUCTIONS.md  NEW_GRAPH_MODELLING_AGENT_DESCRIPTION.md  NEW_GRAPH_MODELLING_AGENT_INSTRUCTIONS.md  SPANNER_GRAPH_SCHEMA_GENERATION_AGENT_INSTRUCTIONS.md  TABLE_TO_GRAPH_LOGICAL_SCHEMA_MODELLING_AGENT_DESCRIPTION.md  TABLE_TO_GRAPH_LOGICAL_SCHEMA_MODELLING_AGENT_INSTRUCTIONS.md  prompts.py  prompts_modelling_table_to_graph.py
src/graph_agents/instructions/query/: GRAPH_QUERY_AGENT_DEFAULT_DESCRIPTION.md  GRAPH_QUERY_AGENT_DEFAULT_INSTRUCTIONS.md  GRAPH_QUERY_QA_AGENT_DEFAULT_DESCRIPTION.md  GRAPH_QUERY_QA_AGENT_DEFAULT_INSTRUCTIONS.md  prompts.py
src/graph_agents/instructions/schema/: ORCHESTRATOR_DESCRIPTION.md  ORCHESTRATOR_INSTRUCTIONS.md  orchestrator.md
src/graph_agents/instructions/visualization/: orchestrator.md
src/graph_agents/tools/: __init__.py
src/graph_agents/tools/entity_resolution/: __init__.py  full_text_search.py
src/graph_agents/tools/entity_resolution_tools/: __init__.py
src/graph_agents/utils/: agent_session.py  database_context.py  dataset.py  embeddings.py  engine.py  example_store.py  information_schema.py  json.py  prompts.py
src/spanner_graph_agent/: __init__.py  agents.py  prompts.py
src/spanner_graph_agent/agents/: __init__.py  graph_agent.py  modelling_agent.py  query_agent.py
src/spanner_graph_agent/tools/: __init__.py  index_tools.py  langchain_tools.py
src/spanner_graph_agent/utils/: agent_session.py  database_context.py  dataset.py  information_schema.py  prompts.py  prompts_modelling_new_graph.py  prompts_modelling_table_to_graph.py
tests/integration/: test_spanner_query_agent.py
(+53 files in other folders)
