[project]
name = "spanner-graph-agent"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "google-adk==1.6.1",
    "langchain-google-spanner",
    "langchain_google_vertexai==2.0.24",
    "pandas",
    "pyyaml",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[tool.setuptools.dynamic]
version = {attr = "spanner_graph_agent.version.__version__"}

[project.urls]
Homepage = "https://github.com/mtyin/spanner-graph-agent"
Repository = "https://github.com/mtyin/spanner-graph-agent.git"

[project.optional-dependencies]
lint = [
    "black[jupyter]==24.8.0",
    "flake8==6.1.0",
    "isort==5.13.2",
]

test = [
    "black[jupyter]==24.8.0",
    "bs4==0.0.2",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_unused_configs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
